--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+  font-family: "Arial Black", Gadget, sans-serif;
+}
+
 #game table {
   border: 3px blue outset;
   background-color: blue;
